# rust-validator

./: -  .gitignore  Cargo.toml  Dockerfile.feed  README.md  build.rs  docker-compose.yml  feed_publisher.py  install_choco.ps1
proto/: order.proto
src/: lib.rs  main.rs  messaging.rs  orderbook.rs  utils.rs
