[package]
name = "rust_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
nats = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
prost = "0.12"
bytes = "1.5"

[build-dependencies]
prost-build = "0.12"

