[package]
name = "rust_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.32"
tokio = { version = "1.36", features = ["full"] }
prost = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
futures-util = "0.3"
memmap2 = "0.9.5"
rand_distr = "0.4"
chrono = "0.4.41"
glob = "0.3.2"

[build-dependencies]
prost-build = "0.12"

